test/multilocale/diten/localBlock/needMultiLocales/localBlock7.good
First local block
Second local block
Third local block
localBlock7.chpl:21: error: cannot access remote data in local block
